Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
                 <p>Votre destination pour une cuisine halal authentique et savoureuse à Castillon-la-Bataille.</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com/royaume_des_sandwiches/" target="_blank" class="social-link">📷</a>
-                    <a href="https://www.facebook.com/RoyaumedesSandwiches" target="_blank" class="social-link">📘</a>
+                    <a href="https://www.facebook.com/profile.php?id=61566467397080" target="_blank" class="social-link">📘</a>
                     <a href="tel:0780386279" class="social-link">📞</a>
                 </div>
             </div>
@@ -1283,4 +1283,5 @@
         });
     </script>
 </body>
+
 </html>
