Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index-ar.html
+++ b/index-ar.html
@@ -1186,7 +1186,7 @@
                     <h3>وسائل التواصل الاجتماعي</h3>
                     <p>
                         <a href="https://www.instagram.com/royaume_des_sandwiches/" target="_blank">إنستغرام</a><br>
-                        <a href="https://www.facebook.com/RoyaumedesSandwiches" target="_blank">فيسبوك</a>
+                        <a href="https://www.facebook.com/profile.php?id=61566467397080" target="_blank">فيسبوك</a>
                     </p>
                     <p style="font-size: 0.9rem; color: var(--gray-text); margin-top: 0.5rem;">@royaume_des_sandwiches</p>
                 </div>
@@ -1291,4 +1291,5 @@
         });
     </script>
 </body>
+
 </html>
