--- a/index-ar.html
+++ b/index-ar.html
@@ -1202,7 +1202,7 @@
                 <p>وجهتك للمأكولات الحلال الأصيلة واللذيذة في كاستيون لا باتاي.</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com/royaume_des_sandwiches/" target="_blank" class="social-link">📷</a>
-                    <a href="https://www.facebook.com/RoyaumedesSandwiches" target="_blank" class="social-link">📘</a>
+                    <a href="https://www.facebook.com/profile.php?id=61566467397080" target="_blank" class="social-link">📘</a>
                     <a href="tel:0780386279" class="social-link">📞</a>
                 </div>
             </div>
@@ -1293,4 +1293,5 @@
 </body>
 
 </html>
+
 
