Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
                     <h3>Réseaux Sociaux</h3>
                     <p>
                         <a href="https://www.instagram.com/royaume_des_sandwiches/" target="_blank">Instagram</a><br>
-                        <a href="https://www.facebook.com/RoyaumedesSandwiches" target="_blank">Facebook</a>
+                        <a href="https://www.facebook.com/profile.php?id=61566467397080" target="_blank">Facebook</a>
                     </p>
                     <p style="font-size: 0.9rem; color: var(--gray-text); margin-top: 0.5rem;">@royaume_des_sandwiches</p>
                 </div>
@@ -1285,4 +1285,5 @@
 </body>
 
 </html>
+
 
