--- a/index.html
+++ b/index.html
@@ -1217,12 +1217,14 @@
                     <li><a href="#videos">Vidéos</a></li>
                     <li><a href="#menu">Menu</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="Menu - Royaume des Sandwiches.pdf" download style="color: var(--orange-primary); font-weight: 600;">📄 Télécharger le Menu (PDF)</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
             <p>&copy; 2025 Royaume des Sandwiches - Tous droits réservés | <a href="tel:0780386279" style="color: var(--orange-primary);">07 80 38 62 79</a></p>
+            <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.7;">Créé par VIEY David / <a href="https://rk-developpement.fr" target="_blank" style="color: var(--orange-primary);">rk-developpement.fr</a></p>
         </div>
     </footer>
 
