--- a/index.html
+++ b/index.html
@@ -1379,7 +1379,7 @@
                 <!-- Kebab et Tacos -->
                 <div class="menu-category">
                     <h3 class="menu-category-title">
-                        <i data-lucide="sandwich"></i> Kebab & Tacos
+                        <i data-lucide="drumstick"></i> Kebab & Tacos
                     </h3>
 
                     <div class="menu-item">
@@ -1434,7 +1434,7 @@
                 <!-- Sandwiches -->
                 <div class="menu-category">
                     <h3 class="menu-category-title">
-                        <i data-lucide="croissant"></i> Sandwiches
+                        <i data-lucide="sandwich"></i> Sandwiches
                     </h3>
 
                     <div class="menu-item">
@@ -1508,7 +1508,7 @@
                 <!-- Cheese & Wraps -->
                 <div class="menu-category">
                     <h3 class="menu-category-title">
-                        <i data-lucide="cake"></i> Cheese & Wraps
+                        <i data-lucide="hamburger"></i> Cheese & Wraps
                     </h3>
 
                     <div class="menu-item">
