--- a/index-ar.html
+++ b/index-ar.html
@@ -1392,7 +1392,7 @@
                 <!-- Kebab et Tacos -->
                 <div class="menu-category">
                     <h3 class="menu-category-title">
-                        <i data-lucide="sandwich"></i> كباب وتاكوس
+                        <i data-lucide="drumstick"></i> كباب وتاكوس
                     </h3>
 
                     <div class="menu-item">
@@ -1447,7 +1447,7 @@
                 <!-- Sandwiches -->
                 <div class="menu-category">
                     <h3 class="menu-category-title">
-                        <i data-lucide="croissant"></i> سندويشات
+                        <i data-lucide="sandwich"></i> سندويشات
                     </h3>
 
                     <div class="menu-item">
@@ -1521,7 +1521,7 @@
                 <!-- Cheese & Wraps -->
                 <div class="menu-category">
                     <h3 class="menu-category-title">
-                        <i data-lucide="cake"></i> جبن وراب
+                        <i data-lucide="hamburger"></i> جبن وراب
                     </h3>
 
                     <div class="menu-item">
